--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-jinja2>=3.1.2
-pyyaml>=6.0.1
-typing-extensions>=4.7.1
-langchain>=0.1.0
-langchain-anthropic>=0.1.1
-python-dotenv>=1.0.0
-pydantic>=2.5.2
-anthropic>=0.18.1
-streamlit==1.26.0
-streamlit-ace>=0.1.1
-watchdog>=3.0.0 
+jinja2==3.1.4
+pyyaml==6.0.2
+streamlit==1.41.1
+python-dotenv==1.0.1
+requests==2.32.3
+typing-extensions==4.12.2
+langchain==0.3.14
+langchain-anthropic==0.3.3
+pydantic==2.10.6
+anthropic==0.42.0
+streamlit-ace==0.1.1
+watchdog==4.0.1 
